--- a/config/storage.yml
+++ b/config/storage.yml
@@ -5,6 +5,13 @@ test:
 local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
+  
+digitalocean:
+  service: S3
+  endpoint: https://ams3.digitaloceanspaces.com
+  access_key_id: <%= Rails.application.credentials.dig(:digitalocean, :access_key_id) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:digitalocean, :secret_access_key) %>
+  public: true
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
