--- a/config/storage.yml
+++ b/config/storage.yml
@@ -11,6 +11,8 @@ digitalocean:
   endpoint: https://ams3.digitaloceanspaces.com
   access_key_id: <%= Rails.application.credentials.dig(:digitalocean, :access_key_id) %>
   secret_access_key: <%= Rails.application.credentials.dig(:digitalocean, :secret_access_key) %>
+  bucket: bramjetten.dev
+  region: ams3
   public: true
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
